YAMLs/001_epi-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epi-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epi-search
  template:
    metadata:
      labels:
        app: epi-search
    spec:
      containers:
      - name: epi-search
        image: gravitate-registry.cr.de-fra.ionos.com/epi-search
        ports:
        - containerPort: 3000
