YAMLs/003_epi-search-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: epi-search
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        prefix: /epi-search
    route:
    - destination:
        host: epi-search.default.svc.cluster.local
        port:
          number: 3000
